--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <option value="DKK">DKK - Danish Krone</option>
                     <option value="HUF">HUF - Hungarian Forint</option>
                     <option value="CZK">CZK - Czech Koruna</option>
-                    <option value="GPB">GBP - Great Britain Pound</option>
+                    <option value="GBP">GBP - Great Britain Pound</option>
                     <option value="RON">RON - Romanian Leu</option>
                     <option value="SEK">SEK - Swedish Krona</option>
                     <option value="INR">INR - Indian Rupee</option>
